--- a/quanlydaotao2.html
+++ b/quanlydaotao2.html
@@ -124,16 +124,16 @@
                                 <section id="polylang-2" class="widget widget_polylang">
                                     <ul>
                                         <li class="lang-item lang-item-2 lang-item-vi current-lang lang-item-first">
-                                            <a lang="vi" hreflang="vi" href="http://lifebalance.vn/"><img src="assets/images/logo/tiengviet.png" title="Tiếng Việt" alt="Tiếng Việt" width="16" height="11" /></a>
+                                            <a lang="vi" hreflang="vi" href="http://lifebalance.vn/"><img alt="tiengviet" src="assets/images/logo/tiengviet.png" title="Tiếng Việt" alt="Tiếng Việt" width="16" height="11" /></a>
                                         </li>
                                         <li class="lang-item lang-item-5 lang-item-en no-translation">
-                                            <a lang="en-US" hreflang="en-US" href="http://lifebalance.vn/en/"><img src="assets/images/logo/tienganh.png" title="English" alt="English" width="16" height="11" /></a>
+                                            <a lang="en-US" hreflang="en-US" href="http://lifebalance.vn/en/"><img alt="tienganh" src="assets/images/logo/tienganh.png" title="English" alt="English" width="16" height="11" /></a>
                                         </li>
                                         <li class="lang-item lang-item-13 lang-item-ko no-translation">
-                                            <a lang="ko-KR" hreflang="ko-KR" href="http://lifebalance.vn/ko/"><img src="assets/images/logo/tienghan.png" title="한국어" alt="한국어" width="16" height="11" /></a>
+                                            <a lang="ko-KR" hreflang="ko-KR" href="http://lifebalance.vn/ko/"><img alt="tienghan" src="assets/images/logo/tienghan.png" title="한국어" alt="한국어" width="16" height="11" /></a>
                                         </li>
                                         <li class="lang-item lang-item-17 lang-item-ja no-translation">
-                                            <a lang="ja" hreflang="ja" href="http://lifebalance.vn/ja/"><img src="assets/images/logo/tiengnhat.png" title="日本語" alt="日本語" width="16" height="11" /></a>
+                                            <a lang="ja" hreflang="ja" href="http://lifebalance.vn/ja/"><img alt="tiengnhat" src="assets/images/logo/tiengnhat.png" title="日本語" alt="日本語" width="16" height="11" /></a>
                                         </li>
                                     </ul>
                                 </section>
@@ -154,7 +154,7 @@
                         <div class="col-md-3 col-sm-3">
                             <div class="logo">
                                 <!-- Brand -->
-                                <a class="navbar-brand page-scroll sticky-logo" href="http://lifebalance.vn/"> <img src="assets/images/logo/logo3.png" alt="Life Balance" /></a>
+                                <a class="navbar-brand page-scroll sticky-logo" href="http://lifebalance.vn/"> <img alt="logo lifebalance" src="assets/images/logo/logo3.png" alt="Life Balance" /></a>
                             </div>
                         </div>
                         <!-- logo end -->
@@ -232,7 +232,7 @@
                         <div class="col-md-12">
                             <div class="mobile-menu">
                                 <div class="logo">
-                                    <a href="http://lifebalance.vn/"><img src="assets/images/logo/logo3.png" alt="Life Balance" /></a>
+                                    <a href="http://lifebalance.vn/"><img alt="logo lifebalance" src="assets/images/logo/logo3.png" alt="Life Balance" /></a>
                                 </div>
                                 <nav id="dropdown">
                                     <ul>
@@ -319,7 +319,7 @@
                             <!-- single-blog start -->
                             <article class="blog-post-wrapper">
                                 <div class="tieude-logo">
-                                    <img src="assets/images/quanlydaotao-new/pmcknowledge.png">
+                                    <img alt="logo pmcknowledge" src="assets/images/quanlydaotao-new/pmcknowledge.png">
                                 </div>
                                 <div class="tieude-noidung">
                                     <h5>CÁC CHƯƠNG TRÌNH ĐÀO TẠO</h5>
@@ -332,7 +332,7 @@
                                                 <h4>01</h4>
                                             </div>
                                             <div class="item-icon">
-                                                <img src="assets/images/quanlydaotao-new/anh1.png">
+                                                <img alt="nhap-mon-lam-sach" src="assets/images/quanlydaotao-new/anh1.png">
                                             </div>
                                             <div class="item-text">
                                                 <h5>NHẬP MÔN LÀM SẠCH</h5>
@@ -345,7 +345,7 @@
                                                 <h4>02</h4>
                                             </div>
                                             <div class="item-icon">
-                                                <img src="assets/images/quanlydaotao-new/anh2.png">
+                                                <img alt="chuong-trinh-lam-sach-xanh" src="assets/images/quanlydaotao-new/anh2.png">
                                             </div>
                                             <div class="item-text">
                                                 <h5>CHƯƠNG TRÌNH LÀM SẠCH XANH</h5>
@@ -358,7 +358,7 @@
                                                 <h4>03</h4>
                                             </div>
                                             <div class="item-icon">
-                                                <img src="assets/images/quanlydaotao-new/anh3.png">
+                                                <img alt="dich-vu-khach-hang-trong-linh-vuc-lam-sach" src="assets/images/quanlydaotao-new/anh3.png">
                                             </div>
                                             <div class="item-text">
                                                 <h5>DỊCH VỤ KHÁCH HÀNG TRONG LĨNH VỰC LÀM SẠCH</h5>
@@ -371,7 +371,7 @@
                                                 <h4>04</h4>
                                             </div>
                                             <div class="item-icon">
-                                                <img src="assets/images/quanlydaotao-new/anh4.png">
+                                                <img alt="kiem-soat-nhiem-khuan-cho-nhan-vien" src="assets/images/quanlydaotao-new/anh4.png">
                                             </div>
                                             <div class="item-text">
                                                 <h5>KIỂM SOÁT NHIỄM KHUẨN CHO NHÂN VIÊN LÀM SẠCH</h5>
@@ -384,7 +384,7 @@
                                                 <h4>05</h4>
                                             </div>
                                             <div class="item-icon">
-                                                <img src="assets/images/quanlydaotao-new/anh5.png">
+                                                <img alt="gioi-thieu-ve-ve-sinh-tham" src="assets/images/quanlydaotao-new/anh5.png">
                                             </div>
                                             <div class="item-text">
                                                 <h5>GIỚI THIỆU VỀ VỆ SINH THẢM (BẢO QUẢN HÀNG NGÀY)</h5>
@@ -399,7 +399,7 @@
                                                 <h4>06</h4>
                                             </div>
                                             <div class="item-icon">
-                                                <img src="assets/images/quanlydaotao-new/anh6.png">
+                                                <img alt="khu-vuc-che-bien-thuc-pham-sach" src="assets/images/quanlydaotao-new/anh6.png">
                                             </div>
                                             <div class="item-text">
                                                 <h5>KHU VỰC CHẾ BIẾN THỰC PHẨM SẠCH</h5>
@@ -412,7 +412,7 @@
                                                 <h4>07</h4>
                                             </div>
                                             <div class="item-icon">
-                                                <img src="assets/images/quanlydaotao-new/anh7.png">
+                                                <img alt="lam-sach-san" src="assets/images/quanlydaotao-new/anh7.png">
                                             </div>
                                             <div class="item-text">
                                                 <h5>LÀM SẠCH SÀN</h5>
@@ -425,7 +425,7 @@
                                                 <h4>08</h4>
                                             </div>
                                             <div class="item-icon">
-                                                <img src="assets/images/quanlydaotao-new/anh8.png">
+                                                <img alt="lam-sach-cua-so" src="assets/images/quanlydaotao-new/anh8.png">
                                             </div>
                                             <div class="item-text">
                                                 <h5>LÀM SẠCH CỬA SỔ</h5>
@@ -438,7 +438,7 @@
                                                 <h4>09</h4>
                                             </div>
                                             <div class="item-icon">
-                                                <img src="assets/images/quanlydaotao-new/anh9.png">
+                                                <img alt="gioi-thieu-quy-trinh-lam-sach-chuyen-nghiep" src="assets/images/quanlydaotao-new/anh9.png">
                                             </div>
                                             <div class="item-text">
                                                 <h5>GIỚI THIỆU VỀ QUY TRÌNH LÀM SẠCH CHUYÊN NGHIỆP</h5>
@@ -451,7 +451,7 @@
                                                 <h4>10</h4>
                                             </div>
                                             <div class="item-icon">
-                                                <img src="assets/images/quanlydaotao-new/anh10.png">
+                                                <img alt="tay-san" src="assets/images/quanlydaotao-new/anh10.png">
                                             </div>
                                             <div class="item-text">
                                                 <h5>TẨY SÀN</h5>
@@ -466,7 +466,7 @@
                                                 <h4>11</h4>
                                             </div>
                                             <div class="item-icon">
-                                                <img src="assets/images/quanlydaotao-new/anh11.png">
+                                                <img alt="phuong-phap-lam-sach-bang-hoi-nuoc" src="assets/images/quanlydaotao-new/anh11.png">
                                             </div>
                                             <div class="item-text">
                                                 <h5>PHƯƠNG PHÁP LÀM SẠCH BẰNG HƠI NƯỚC</h5>
@@ -479,7 +479,7 @@
                                                 <h4>12</h4>
                                             </div>
                                             <div class="item-icon">
-                                                <img src="assets/images/quanlydaotao-new/anh12.png">
+                                                <img alt="may-phun-ap-luc-va-loai-bo-vet-son-tuong" src="assets/images/quanlydaotao-new/anh12.png">
                                             </div>
                                             <div class="item-text">
                                                 <h5>MÁY PHUN ÁP LỰC VÀ LOẠI BỎ VẾT SƠN TƯỜNG</h5>
@@ -492,7 +492,7 @@
                                                 <h4>13</h4>
                                             </div>
                                             <div class="item-icon">
-                                                <img src="assets/images/quanlydaotao-new/anh13.png">
+                                                <img alt="lam-sach-van-phong-lam-sach-dinh-ky" src="assets/images/quanlydaotao-new/anh13.png">
                                             </div>
                                             <div class="item-text">
                                                 <h5>LÀM SẠCH VĂN PHÒNG – LÀM SẠCH ĐỊNH KỲ</h5>
@@ -505,7 +505,7 @@
                                                 <h4>14</h4>
                                             </div>
                                             <div class="item-icon">
-                                                <img src="assets/images/quanlydaotao-new/anh14.png">
+                                                <img alt="vai-tro-giam-sat-lam-sach" src="assets/images/quanlydaotao-new/anh14.png">
                                             </div>
                                             <div class="item-text">
                                                 <h5>VAI TRÒ CỦA NGƯỜI GIÁM SÁT LÀM SẠCH</h5>
